# SSTW

./: .gitignore  .gitnexusrc  AGENTS.md  README.md  conftest.py  pyproject.toml
.codex/: project_contract.md
configs/: README.md
docs/: artifact_rebuild.md  extraction_profiles.md  field_registry.md  file_organization.md  harness_engineering.md  intermediate_state_governance.md  naming_governance.md  paper_project_governance.md  placeholder_random_governance.md  release_boundary.md  test_case_constraints.md
evaluation/: __init__.py
experiments/: README.md
external_baseline/: .gitignore  README.md  __init__.py  baseline_registry.py  explicit_dtw_temporal_alignment.py  external_baseline_clone_results.json  external_baseline_intake_manifest.json  external_baseline_source_inspection.json  modern_command_adapter.py  official_bundle_generator.py  official_command_bridge.py  official_resource_bootstrap.py  official_result_bundle.py  official_runtime_closure.py  official_runtime_progress.py  registry.py  revmark_official_runtime.py  runtime_trace_io.py  score_semantics.py  sigmark_official_hunyuan_runtime.py  source_intake.py  source_registry.json  video_tensor_io.py  videomark_official_runtime.py  videoseal_official_runtime.py  videoshield_official_runtime.py  vidsig_official_runtime.py  wam_frame_official_runtime.py
main/: __init__.py
paper_workflow/: README.md
requirements/: colab_test_runtime_compatibility.txt  paper_runtime_environment_lock.json  paper_runtime_lock.txt
runtime/: __init__.py
scripts/: README.md  bootstrap_colab_test_runtime.py  (+4 more)
(+534 files in other folders)
